# genesis-python

./: .env  .pre-commit-config.yaml  .pylintrc  README.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: run-tests.yaml  run-tests.yml
doc/pygenesis/: index.html
nb/: cache.ipynb  cube.ipynb  download_cubefile.ipynb  download_tablefile.ipynb  find.ipynb  genesis_tests.ipynb  helloworld.ipynb  hierarchy.ipynb  jobs.ipynb  parse_cube.ipynb  profile.ipynb  table.ipynb
src/pygenesis/: __init__.py  cache.py  config.py  config_loader.py  csv_helper.py  cube.py  data.py  destatis.py  find.py  helloworld.py  hierarchy.py  http_helper.py  profile.py  statistic.py  table.py
src/pystatis/: __init__.py  config.py  helloworld.py
tests/: test_cache.py  test_config.py  test_cube.py  test_helloworld.py  test_http_helper.py  test_profile.py  test_pygenesis.py
tests/unit_tests/: test_http_helper.py
