[tool.poetry]
name = "pygenesis"
version = "0.1.0"
description = "Python wrapper for GENESIS web service interface (API) of the Federal Statistical Office."
authors = ["CorrelAid <info@correlaid.org>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[tool.black]
line-length = 120
target-version = ['py39']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
