[tool.poetry]
name = "pygenesis"
version = "0.1.0"
description = "Python wrapper for GENESIS web service interface (API) of the Federal Statistical Office."
authors = ["CorrelAid <info@correlaid.org>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pre-commit = "^2.18.1"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pylint = "^2.13.4"
bandit = "^1.7.4"
safety = "^1.10.3"
mypy = "^0.942"
pdoc3 = "^0.10.0"
pytest-cov = "^3.0.0"

[tool.black]
line-length = 120
target-version = ['py39']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
