[tool.poetry]
authors = ["CorrelAid <info@correlaid.org>"]
description = "Python wrapper for GENESIS web service interface (API) of the Federal Statistical Office."
name = "pygenesis"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^22.3.0"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
mock = "^4.0.3"
mypy = "^0.942"
pre-commit = "^2.18.1"
pylint = "^2.13.4"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
safety = "^2.0.0"
flake8 = "^4.0.1"
jupyter = "^1.0.0"

[tool.black]
line-length = 80
target-version = ['py39']

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "-s -v"
log_cli = false

[tool.isort]
profile = "black"
